# programm25

lab-git/: sort.c
lab1/: 1  1.c
lab2/: 1  1.c  q  q.c
lab4/: 1  1.c  output.txt  xz.txt
lab5/: 1  1.c
lab6/: CMakeLists.txt  dynamic_exe  list.c  list.h  lists_exe  main.c  moving.c
lab6/build_lists/: CMakeCache.txt  Makefile  cmake_install.cmake  lists_exe
lab7/: 1  1.c  2  2.c  3  3.c  4  4.c  5  5.c  5.py  Sleepsort.c  sleepsort
lab8/: Makefile  quicksort.c  quicksort.h  test  test_quicksort.c
rgr/: Makefile  analyzer  freq.c  freq.h  input.txt  main.c  output.txt
